--- a/Seedalot/manifest.json
+++ b/Seedalot/manifest.json
@@ -3,12 +3,12 @@
 "language": "python",
 "author": "etcipnja",
 "description": "Clones given plant with the given parameters ",
-"version": "1.0.1",
+"version": "1.0.2",
 "min_os_version_major": 6,
 "url":"https://raw.githubusercontent.com/etcipnja/Seedalot/master/Seedalot/manifest.json",
 "zip": "https://github.com/etcipnja/Seedalot/archive/master.zip",
 "executable": "python",
-"args": ["Seedalot-master/main.py"],
+"args": ["Seedalot-master/Seedalot/main.py"],
 "config": [
  {"name": "x", "label": "Original plant X coordinate:", "value": "-"},
  {"name": "y", "label": "Original plant Y coordinate:", "value": "-"},
